Version 2.02.63 - 
================================
  Add "monitoring" option to "activation" section of lvm.conf.
  Add --monitor and --ignoremonitoring support to lvcreate.
  Allow dynamic extension of array of areas selected as allocation candidates.
  Export and use only valid cookie value in test suite.
  Remove const modifier for struct volume_group* from process_each_lv_in_vg().
  Don't allow resizing of internal logical volumes.
  Fix libdevmapper-event pkgconfig version string to match libdevmapper.
  Avoid scanning all pvs in the system if operating on a device with mdas.
  Add configure --with-clvmd=singlenode to use clvmd w/o cluster infrastructure.
  Get stacktrace if testsuite test drops core and lvm was built with debugging.
  Disable long living process flag in lvm2app.
  Fix pvcreate device md filter check.
  Suppress repeated errors about the same missing PV uuids.
  Bypass full device scans when using internally-cached VG metadata.
  Only do one full device scan during each read of text format metadata.
  Remove unnecessary full_scan parameter from get_vgids and get_vgnames calls.
  Look up missing PVs by uuid not dev_name in _pvs_single to avoid invalid stat.
  Make find_pv_in_vg_by_uuid() return same type as related functions.
  Introduce is_missing_pv().
  Fix clvmd Makefile to not overwrite LIBS from template definition.

Version 2.02.62 - 9th March 2010
================================
  Add use_mlockall and mlock_filter to activation section of lvm.conf.
  Add default alternative to mlockall using mlock to reduce pinned memory size.
  Remove -rdynamic from static builds.
  Update checks for pthread, readline & selinux libs and link only when needed.
  Introduce makefile vars UDEV_LIBS, DL_LIBS, SELINUX_LIBS, STATIC_LIBS.
  Introduce makefile vars LVMINTERNAL_LIBS, READLINE_LIBS, PTHREAD_LIBS.
  Toggle configure help to print --disable-fsadm.
  Use $() instead of ${} consistently for all Makefile variables.